--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -5,7 +5,7 @@
   <div class="ms-Grid-row">
     <div class="ms-Grid-col" [ngClass]=" !viewchat ? 'ms-u-lg12' : 'ms-u-lg6' "  >
       <div class="userview" *ngFor="let chat of chatlist,let i = index;" (click)="openchatscreen(chat,i)" >
-        {{chat.username}}<span>{{difflist[i]}}</span>
+        {{chat.username}}<span class="countview">{{difflist[i]}}</span>
       </div>
     </div>
     <div *ngIf="viewchat" class="ms-Grid-col ms-u-lg6 chatbox">
