--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="cookieService.get('token')" >
+<!-- <div *ngIf="cookieService.get('token')" >
   <div class="form-group form-data " class="logbutton">
     <button type="submit" class="btn btn-default" (click)="logoutUser()">Logout</button>
   </div>
-</div>
+</div> -->
 <router-outlet></router-outlet>
