product functionality added

--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -7,3 +7,9 @@
   margin-left: calc(20vw);
   border-radius: 10px;
 }
+
+.searchview{
+  background-color: #efefef;
+  border-radius: 5px;
+    margin-left: calc(20vw);
+}
