--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="ms-Grid">
   <div class="ms-Grid-row">
-    <input type="text" id="searchbox" [(ngModel)]="searchBy" (keyup)="searchByQuery()">
+    <input class="searchview" type="text" id="searchbox" [(ngModel)]="searchBy" (keyup)="searchByQuery()">
   </div>
   <div class="ms-Grid-row" *ngFor="let product of productSearchList">
     <div class="ms-Grid-col ms-u-lg6 userview">
